--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -131,6 +131,7 @@ a:hover{
     position: relative;
     max-width: 1610px;
     margin: auto;
+    padding-top: 40px;
 }
 .section_one .container {
     width: 100%;
@@ -779,9 +780,131 @@ a:hover{
     border-left-color: #B82E24;
     
 }
-
 .vue-notification.success {
     background: #68CD86;
     border-left-color: #42A85F;
 }
+h1{
+    font-size: 200%;
+}
 /* END NOTIFICATION STYLE */
+.text-center {
+    text-align: center;
+}
+/* FLEX */
+.d-flex{
+    display: flex;
+}
+.align-items-center{
+    align-items: center;
+}
+.justify-content-center{
+    justify-content: center;
+}
+.justify-content-around{
+    justify-content: space-around;
+}
+.justify-content-between{
+    justify-content: space-between;
+}
+.flex-column{
+    flex-direction: column;
+}
+.flex-row{
+    flex-direction: row;
+}
+/* WIDTH */
+.w-100{
+    width: 100%;
+}
+.w-50{
+    width: 50%;
+}
+.w-25{
+    width: 25%;
+}
+/* PADDING  ALL CLASSES*/
+/* TOP */
+.pt-5 {
+    padding-top: 5rem;
+}
+.pt-4{
+    padding-top: 4rem;
+}
+.pt-3 {
+    padding-top: 3rem;
+}
+.pt-2{
+    padding-top: 2rem;
+}
+.pt-1 {
+    padding-top: 1rem;
+}
+/* BOTTOM */
+.pb-5 {
+    padding-bottom: 5rem;
+}
+
+.pb-4 {
+    padding-bottom: 4rem;
+}
+
+.pb-3 {
+    padding-bottom: 3rem;
+}
+
+.pb-2 {
+    padding-bottom: 2rem;
+}
+
+.pb-1 {
+    padding-bottom: 1rem;
+}
+/* VERTICAL */
+.py-1{
+    padding: 1rem 0 1rem 0
+}
+.py-2 {
+    padding: 2rem 0 2rem 0
+}
+/* MARGIN ALL CLASSES*/
+/* TOP */
+.mt-5 {
+    margin-top: 5rem;
+}
+
+.mt-4 {
+    margin-top: 4rem;
+}
+
+.mt-3 {
+    margin-top: 3rem;
+}
+
+.mt-2 {
+    margin-top: 2rem;
+}
+
+.mt-1 {
+    margin-top: 1rem;
+}
+/* BOTTOM */
+.mb-5 {
+    margin-bottom: 5rem;
+}
+
+.mb-4 {
+    margin-bottom: 4rem;
+}
+
+.mb-3 {
+    margin-bottom: 3rem;
+}
+
+.mb-2 {
+    margin-bottom: 2rem;
+}
+
+.mb-1 {
+    margin-bottom: 1rem;
+}
