--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -12,6 +12,30 @@ body {
     overflow-x: hidden;
     height: 100%;
 }
+textarea:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="time"]:focus,
+input[type="week"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="color"]:focus,
+.uneditable-input:focus {
+    border-color: rgba(231, 238, 229, 0.8);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(234, 238, 233, 0.6);
+    outline: 0 none;
+}
+.btn:focus {
+    outline: none;
+    box-shadow: none;
+}
 .navbar {
     width: 100%;
     height: 9vh;
