--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -51,6 +51,15 @@ input[type="color"]:focus,
     left: 0;
     transition: 0.2s;
 }
+a{
+  color: #000817 !important;
+}
+a:hover{
+  color: #000 !important;
+}
+p {
+    margin-bottom: 0px !important;
+}
 .navbar.sticky {
     box-shadow: 0 0 10px grey;
     position: fixed;
@@ -534,7 +543,7 @@ a:hover{
 }
 .section_five .container .social_btns a{
     text-decoration: none;
-    color: white;
+    color: white !important;
     font-size: 20px;
     width: 40px;
     height: 40px;
