--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -16,7 +16,7 @@ body {
     display: none;
 }
 
-textarea:focus,
+/* textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="datetime"]:focus,
@@ -35,7 +35,7 @@ input[type="color"]:focus,
     border-color: rgba(231, 238, 229, 0.8);
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(234, 238, 233, 0.6);
     outline: 0 none;
-}
+} */
 .btn:focus {
     outline: none;
     box-shadow: none;
