--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -35,7 +35,7 @@ input[type="tel"]:focus,
 input[type="color"]:focus,
 .uneditable-input:focus {
     border-color: rgba(231, 238, 229, 0.8);
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(234, 238, 233, 0.6);
+    /* box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(234, 238, 233, 0.6); */
     outline: 0 none;
 }
 .btn:focus {
@@ -840,6 +840,9 @@ h1{
 }
 .c-link {
     color: #3498db;
+}
+.c-white {
+    color: white;
 }
 .u-none {
     text-decoration: none;
